Changed a tags for nav and preloaded fonts and images.

--- a/about.html
+++ b/about.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - J.E. Sherwood</title>
+    <title>About - Jesse Sherwood</title>
+    <link rel="preload" href="fonts/Monoton/Monoton-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="fonts/rubik/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="css/styles.css" as="style" />
+    <link rel="preload" as="image" href="images/deer-skeleton.jpg">
+    <link rel="preload" as="image" href="images/me.jpg">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/x-icon" href="images/favicon-blue.ico">
 </head>
@@ -15,9 +20,9 @@
 
         <nav role="navigation" aria-label="Main navigation">
             <ul>
-                <li><a href="index.html">Work</a></li>
-                <li><a href="about.html" aria-current="page">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="">Work</a></li>
+                <li><a href="about" aria-current="page">About</a></li>
+                <li><a href="contact">Contact</a></li>
             </ul>
         </nav>
 
