--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jesse Sherwood</title>
+    <link rel="preload" href="fonts/Monoton/Monoton-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="fonts/rubik/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="css/styles.css" as="style" />
+    <link rel="preload" as="image" href="images/deer-skeleton.jpg">
+    <link rel="preload" as="image" href="images/me.jpg">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/x-icon" href="images/favicon-red.ico">
 </head>
@@ -13,9 +18,9 @@
     </div>
     <nav role="navigation" aria-label="Main navigation">
         <ul>
-            <li><a href="index.html" aria-current="page">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="" aria-current="page">Work</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="contact">Contact</a></li>
         </ul>
     </nav>
     <div class="container">
