--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - J.E. Sherwood</title>
+    <title>Contact - Jesse Sherwood</title>
+    <link rel="preload" href="fonts/Monoton/Monoton-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="fonts/rubik/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="css/styles.css" as="style" />
+    <link rel="preload" as="image" href="images/deer-skeleton.jpg">
+    <link rel="preload" as="image" href="images/me.jpg">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/x-icon" href="images/favicon-orange.ico">
 </head>
@@ -17,9 +22,9 @@
     <!-- Main navigation (role is implicit) -->
     <nav aria-label="Main navigation">
         <ul>
-            <li><a href="index.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html" aria-current="page">Contact</a></li>
+            <li><a href="">Work</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="contact" aria-current="page">Contact</a></li>
         </ul>
     </nav>
 
