--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <!-- Main navigation (role is implicit) -->
     <nav aria-label="Main navigation">
         <ul>
-            <li><a href="">Work</a></li>
+            <li><a href="/">Work</a></li>
             <li><a href="about">About</a></li>
             <li><a href="contact" aria-current="page">Contact</a></li>
         </ul>
