--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
         <nav role="navigation" aria-label="Main navigation">
             <ul>
-                <li><a href="">Work</a></li>
+                <li><a href="/">Work</a></li>
                 <li><a href="about" aria-current="page">About</a></li>
                 <li><a href="contact">Contact</a></li>
             </ul>
