--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <nav role="navigation" aria-label="Main navigation">
         <ul>
-            <li><a href="" aria-current="page">Work</a></li>
+            <li><a href="/" aria-current="page">Work</a></li>
             <li><a href="about">About</a></li>
             <li><a href="contact">Contact</a></li>
         </ul>
