--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jesse Sherwood</title>
-    <link rel="preload" href="fonts/Monoton/Monoton-Regular.ttf" as="font" type="font/ttf" crossorigin>
-    <link rel="preload" href="fonts/rubik/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="fonts/Monoton/Monoton-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/rubik/Rubik-Regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="css/styles.css" as="style" />
     <link rel="preload" as="image" href="images/deer-skeleton.jpg">
     <link rel="preload" as="image" href="images/me.jpg">
